--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "mescroll.js": "^1.3.2",
     "vue": "^2.5.2",
     "vue-concise-slider": "^2.4.8",
+    "vue-impression": "^0.15.27",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vue-swiper-component": "^2.1.2",
-    "vue-touch": "^2.0.0-beta.4"
+    "vue-touch": "^2.0.0-beta.4",
+    "vue2-infinite-scroll": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
